# Ip_beacon

./: Cargo.toml  Readme.md  makefile
src/: environment.rs  ip_address.rs  lib.rs  main.rs
